# local-machine

./: Dockerfile  README-azure-databricks.md  README-devcontainer.md  README-gitpod.md  README.md  justfile  pyproject.toml  setup_macos_bigsur.sh
app/: main.py
conf/: app_config.toml
just/: README_justfile-setup.md  justfile.linux  justfile.macos  justfile.windows
sh/: README_bootstrap.md  bootstrap_linux.sh  bootstrap_macos.sh  bootstrap_windows.ps1
sh/archive/: setup_macos_bigsur_sh.md
src/local_machine/: __init__.py  app.py  config.py  utils.py
